# bp

./: README.md  config  data.csv  install_log.txt  license  sslcert.pem
BP_latex/: projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex
BP_latex/chapters/: bigdata.tex  conclusion.tex  design.tex  implementation.tex  industry.tex  introdution.tex  storage.tex  testing.tex
ServerSW/: bp_mariadb.sql  mariadb.sh  privileges.sh
ServerSW/AggregationServer/: AggregationServer.cpp  AggregationServer.h  CMakeLists.txt  Message.cpp  Message.h  Structures.h  main.cpp
ServerSW/AggregationServer/communication/: InfluxDatabase.cpp  InfluxDatabase.h  UDPServer.cpp  UDPServer.h  UDPServer.h.save
ServerSW/AggregationServer/parameters/: configParamsGetter.cpp  configParamsGetter.h
ServerSW/AggregationServer/spdlog/: tweakme.h
ServerSW/AggregationServer/spdlog/fmt/bundled/: core.h  format-inl.h  format.h
ServerSW/ConfigGenerator/: CMakeLists.txt  ConfigGenerator.cpp  ConfigGenerator.h  ParamsGetter.cpp  ParamsGetter.h  Structures.h  main.cpp
ServerSW/ConfigGenerator/Connection/: Database.cpp  Database.h
ServerSW/ConfigGenerator/Logger/: Logger.cpp
ServerSW/ConfigGenerator/spdlog/: logger.h  spdlog.h
ServerSW/ConfigGenerator/spdlog/details/: os-inl.h  os.h
ServerSW/ConfigGenerator/spdlog/fmt/bundled/: format-inl.h  printf.h
ServerSW/ConfigGenerator/spdlog/sinks/: rotating_file_sink.h
ServerSW/RawServer/: CMakeLists.txt  FileCompressor.cpp  FileCompressor.h  Message.cpp  Message.h  RawServer.cpp  RawServer.h  Structures.h  TDMSFile.cpp  TDMSFile.h  main.cpp
ServerSW/RawServer/communication/: TCPServer.cpp  TCPServer.h
ServerSW/RawServer/parameters/: configParamsGetter.cpp  configParamsGetter.h
ServerSW/RawServer/spdlog/: common.h  spdlog.h  tweakme.h
ServerSW/RawServer/spdlog/details/: file_helper-inl.h  file_helper.h  os-inl.h  os.h  pattern_formatter-inl.h
ServerSW/RawServer/spdlog/fmt/bundled/: core.h  format.h
ServerSW/RawServer/spdlog/sinks/: rotating_file_sink-inl.h  rotating_file_sink.h
ServerSW/SDCardInit/: DiskCreator.sh  RTPatch.sh  init.sh
Testing/: 3MB.data  500kB.data  SenderThread.cpp  SenderThread.h  UDP.h  compress.sh  createTestDatabases.sh  evaluateLoadTest.sh  main.cpp
Testing/CSVImport/: CMakeLists.txt  Structures.h  UDP.cpp  UDP.h  main.cpp
Testing/DataCompress/: CMakeLists.txt  DeltaCompression.cpp  DeltaCompression.h  Structures.h  ZipCompression.cpp  ZipCompression.h  main.cpp
Testing/Encoder/: CMakeLists.txt  DeltaEncode.cpp  DeltaEncode.h  Structures.h  main.cpp
Testing/MessageGenerator/: CMakeLists.txt  SenderThread.cpp  SenderThread.h  Structures.h  TCP.cpp  TCP.h  UDP.cpp  UDP.h  main.cpp
Testing/output/: test_10_90u_10min_100ms.txt  test_12_60u_10min_100ms.txt  test_12_80u_10min_100ms.txt  test_13_60u_10min_100ms.txt  test_14_50u_10min_100ms.txt  test_1_1u_10min_1000ms.txt  test_2_10u10min1000ms.txt  test_3_100u_10min_1000ms.txt  test_4_1u_10min_100ms.txt  test_5_10u_10min_100ms.txt  test_6_100u_10min_100ms.txt  test_7_10u_10min_10ms.txt  test_7_1u_10min_10ms.txt  test_9_100u_10min_10ms.txt
UnitSW/: config.ini  config_header.ini  getconfig.sh  run.sh  start.sh
UnitSW/Aggregation/: Aggregation.cpp  Aggregation.h  CMakeLists.txt  Structures.h  UDPClient.cpp  UDPClient.h  main.cpp
UnitSW/Aggregation/Configuration/: Configuration.cpp  Configuration.h  ini.c
UnitSW/Aggregation/Logger/: Logger.cpp
UnitSW/Aggregation/sharedMemory/: SHMAggregationRead.cpp  SHMAggregationRead.h
UnitSW/Reader/: CMakeLists.txt  TCPClient.cpp  TCPClient.h  main.cpp  structures.h
UnitSW/Reader/abstractClass/: InterfaceReader.cpp  InterfaceReader.h
UnitSW/Reader/configReader/: Configuration.cpp  Configuration.h  INIReader.h  ini.h
UnitSW/Reader/dataInterface/: File.cpp  File.h  SPI.cpp  SPI.h
UnitSW/Reader/filter/: Filter.cpp  Filter.h  arm_fir_decimate.h  arm_fir_decimate_init_q31.c  arm_fir_decimate_q31.c
UnitSW/Reader/sharedMemory/: SHMAggregationWrite.cpp  SHMAggregationWrite.h  SHMRawRead.cpp  SHMRawRead.h  SHMRawWrite.cpp  SHMRawWrite.h
UnitSW/Reader/spdlog/fmt/bundled/: posix.h
